fix: styling, layout issues with subcomponents

--- a/quartz/components/styles/backlinks.scss
+++ b/quartz/components/styles/backlinks.scss
@@ -3,20 +3,20 @@
 .backlinks {
   flex-direction: column;
 
-  & > h3 {
-    font-size: 1rem;
-    margin: 0;
+  &>h3 {
+    font-size: 1.5rem;
+    margin: 0.75rem 0 0.25rem 0;
   }
 
-  & > ul.overflow {
+  &>ul.overflow {
     list-style: none;
     padding: 0;
     margin: 0.5rem 0;
     max-height: calc(100% - 2rem);
     overscroll-behavior: contain;
 
-    & > li {
-      & > a {
+    &>li {
+      &>a {
         background-color: transparent;
       }
     }
